@@ -30,6 +30,7 @@ import com.iab.openrtb.response.Bid;
 import io.vertx.core.MultiMap;
 import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
+import org.apache.commons.collections4.MapUtils;
 import org.apache.commons.lang3.ObjectUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.lang3.math.NumberUtils;
@@ -107,15 +108,18 @@ import org.prebid.server.proto.openrtb.ext.response.ExtBidPrebid;
 import org.prebid.server.proto.openrtb.ext.response.ExtBidPrebidMeta;
 import org.prebid.server.util.BidderUtil;
 import org.prebid.server.util.HttpUtil;
+import org.prebid.server.util.ListUtil;
 import org.prebid.server.util.ObjectUtil;
 
 import java.math.BigDecimal;
 import java.net.URISyntaxException;
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Deque;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -139,16 +143,9 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private static final String TK_XINT_QUERY_PARAMETER = "tk_xint";
     private static final String PREBID_SERVER_USER_AGENT = "prebid-server/1.0";
 
-    private static final String SOURCE_RUBICON = "rubiconproject.com";
-
     private static final String FPD_GPID_FIELD = "gpid";
     private static final String FPD_SKADN_FIELD = "skadn";
-    private static final String FPD_SECTIONCAT_FIELD = "sectioncat";
-    private static final String FPD_PAGECAT_FIELD = "pagecat";
     private static final String FPD_PAGE_FIELD = "page";
-    private static final String FPD_REF_FIELD = "ref";
-    private static final String FPD_SEARCH_FIELD = "search";
-    private static final String FPD_CONTEXT_FIELD = "context";
     private static final String FPD_DATA_FIELD = "data";
     private static final String FPD_DATA_PBADSLOT_FIELD = "pbadslot";
     private static final String FPD_ADSERVER_FIELD = "adserver";
@@ -159,10 +156,14 @@ public class RubiconBidder implements Bidder<BidRequest> {
     private static final String PREBID_EXT = "prebid";
 
     private static final String PPUID_STYPE = "ppuid";
-    private static final String OTHER_STYPE = "other";
     private static final String SHA256EMAIL_STYPE = "sha256email";
     private static final String DMP_STYPE = "dmp";
     private static final String XAPI_CURRENCY = "USD";
+
+    private static final int MAX_NUMBER_OF_SEGMENTS = 100;
+    private static final String SEGTAX_IAB = "iab";
+    private static final String SEGTAX_TAX = "tax";
+    private static final String SEGTAX = "segtax";
 
     private static final Set<Integer> USER_SEGTAXES = Set.of(4);
     private static final Set<Integer> SITE_SEGTAXES = Set.of(1, 2, 5, 6);
@@ -177,6 +178,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
             };
     private static final boolean DEFAULT_MULTIFORMAT_VALUE = false;
 
+    private final String bidderName;
     private final String endpointUrl;
     private final Set<String> supportedVendors;
     private final boolean generateBidId;
@@ -186,7 +188,8 @@ public class RubiconBidder implements Bidder<BidRequest> {
 
     private final MultiMap headers;
 
-    public RubiconBidder(String endpoint,
+    public RubiconBidder(String bidderName,
+                         String endpoint,
                          String xapiUsername,
                          String xapiPassword,
                          List<String> supportedVendors,
@@ -195,6 +198,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                          PriceFloorResolver floorResolver,
                          JacksonMapper mapper) {
 
+        this.bidderName = Objects.requireNonNull(bidderName);
         this.endpointUrl = HttpUtil.validateUrl(Objects.requireNonNull(endpoint));
         this.supportedVendors = Set.copyOf(Objects.requireNonNull(supportedVendors));
         this.generateBidId = generateBidId;
@@ -317,7 +321,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
         return targetings != null
                 ? targetings.stream()
                 .filter(targeting -> !CollectionUtils.isEmpty(targeting.getValues()))
-                .collect(Collectors.toMap(RubiconTargeting::getKey, targeting -> targeting.getValues().get(0)))
+                .collect(Collectors.toMap(RubiconTargeting::getKey, targeting -> targeting.getValues().getFirst()))
                 : Collections.emptyMap();
     }
 
@@ -419,7 +423,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 .device(makeDevice(bidRequest.getDevice()))
                 .site(makeSite(bidRequest.getSite(), impLanguage, extImpRubicon))
                 .app(makeApp(bidRequest.getApp(), extImpRubicon))
-                .source(makeSource(bidRequest.getSource(), extImpRubicon.getPchain()))
+                .source(makeSource(bidRequest.getSource()))
                 .cur(null) // suppress currencies
                 .regs(makeRegs(bidRequest.getRegs()))
                 .ext(null) // suppress ext
@@ -542,6 +546,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 imp,
                 mediaType,
                 null,
+                bidderName,
                 warnings);
     }
 
@@ -696,7 +701,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
         mergeFirstPartyDataFromApp(app, result);
         mergeFirstPartyDataFromImp(imp, rubiconImpExt, result);
 
-        return result.size() > 0 ? result : null;
+        return !result.isEmpty() ? result : null;
     }
 
     private RubiconImpExtPrebid makeRubiconExtPrebid(PriceFloorResult priceFloorResult,
@@ -730,16 +735,8 @@ public class RubiconBidder implements Bidder<BidRequest> {
             populateFirstPartyDataAttributes(siteExt.getData(), result);
         }
 
-        // merge OPENRTB.site.sectioncat to every impression XAPI.imp[].ext.rp.target.sectioncat
-        mergeCollectionAttributeIntoArray(result, site, Site::getSectioncat, FPD_SECTIONCAT_FIELD);
-        // merge OPENRTB.site.pagecat to every impression XAPI.imp[].ext.rp.target.pagecat
-        mergeCollectionAttributeIntoArray(result, site, Site::getPagecat, FPD_PAGECAT_FIELD);
         // merge OPENRTB.site.page to every impression XAPI.imp[].ext.rp.target.page
         mergeStringAttributeIntoArray(result, site, Site::getPage, FPD_PAGE_FIELD);
-        // merge OPENRTB.site.ref to every impression XAPI.imp[].ext.rp.target.ref
-        mergeStringAttributeIntoArray(result, site, Site::getRef, FPD_REF_FIELD);
-        // merge OPENRTB.site.search to every impression XAPI.imp[].ext.rp.target.search
-        mergeStringAttributeIntoArray(result, site, Site::getSearch, FPD_SEARCH_FIELD);
     }
 
     private void mergeFirstPartyDataFromApp(App app, ObjectNode result) {
@@ -748,11 +745,6 @@ public class RubiconBidder implements Bidder<BidRequest> {
         if (appExt != null) {
             populateFirstPartyDataAttributes(appExt.getData(), result);
         }
-
-        // merge OPENRTB.app.sectioncat to every impression XAPI.imp[].ext.rp.target.sectioncat
-        mergeCollectionAttributeIntoArray(result, app, App::getSectioncat, FPD_SECTIONCAT_FIELD);
-        // merge OPENRTB.app.pagecat to every impression XAPI.imp[].ext.rp.target.pagecat
-        mergeCollectionAttributeIntoArray(result, app, App::getPagecat, FPD_PAGECAT_FIELD);
     }
 
     private void mergeFirstPartyDataFromImp(Imp imp,
@@ -763,12 +755,6 @@ public class RubiconBidder implements Bidder<BidRequest> {
         mergeFirstPartyDataKeywords(imp, result);
         // merge OPENRTB.imp[].ext.rubicon.keywords to XAPI.imp[].ext.rp.target.keywords
         mergeCollectionAttributeIntoArray(result, rubiconImpExt, ExtImpRubicon::getKeywords, FPD_KEYWORDS_FIELD);
-        // merge OPENRTB.imp[].ext.data.search to XAPI.imp[].ext.rp.target.search
-        mergeStringAttributeIntoArray(
-                result,
-                imp.getExt().get(FPD_DATA_FIELD),
-                node -> getTextValueFromNodeByPath(node, FPD_SEARCH_FIELD),
-                FPD_SEARCH_FIELD);
     }
 
     private void mergeFirstPartyDataFromData(Imp imp, ObjectNode result) {
@@ -929,7 +915,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final List<ExtRequestPrebidMultiBid> multibids = extRequestPrebid != null
                 ? extRequestPrebid.getMultibid() : null;
         final ExtRequestPrebidMultiBid extRequestPrebidMultiBid =
-                CollectionUtils.isNotEmpty(multibids) ? multibids.get(0) : null;
+                CollectionUtils.isNotEmpty(multibids) ? multibids.getFirst() : null;
         final Integer multibidMaxBids = extRequestPrebidMultiBid != null ? extRequestPrebidMultiBid.getMaxBids() : null;
 
         return multibidMaxBids != null ? multibidMaxBids : 1;
@@ -1123,8 +1109,6 @@ public class RubiconBidder implements Bidder<BidRequest> {
         final String userId = user != null ? user.getId() : null;
         final List<Eid> userEids = user != null ? user.getEids() : null;
         final String resolvedId = userId == null ? resolveUserId(userEids) : null;
-        final String userBuyeruid = user != null ? user.getBuyeruid() : null;
-        final String resolvedBuyeruid = userBuyeruid != null ? userBuyeruid : resolveBuyeruidFromEids(userEids);
         final ExtUser extUser = user != null ? user.getExt() : null;
         final boolean hasStypeToRemove = hasStypeToRemove(userEids);
         final List<Eid> resolvedUserEids = hasStypeToRemove
@@ -1138,9 +1122,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 && userExtData == null
                 && resolvedUserEids == null
                 && resolvedId == null
-                && Objects.equals(userBuyeruid, resolvedBuyeruid)
-                && !hasStypeToRemove
-        ) {
+                && !hasStypeToRemove) {
 
             return hasDataToRemove
                     ? user.toBuilder().data(null).build()
@@ -1159,7 +1141,6 @@ public class RubiconBidder implements Bidder<BidRequest> {
 
         return userBuilder
                 .id(ObjectUtils.defaultIfNull(resolvedId, userId))
-                .buyeruid(resolvedBuyeruid)
                 .gender(null)
                 .yob(null)
                 .geo(null)
@@ -1260,20 +1241,6 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 extUserEidUidExtCopy);
     }
 
-    private static String resolveBuyeruidFromEids(List<Eid> eids) {
-        return CollectionUtils.emptyIfNull(eids).stream()
-                .filter(Objects::nonNull)
-                .filter(eid -> SOURCE_RUBICON.equals(eid.getSource()))
-                .map(Eid::getUids)
-                .filter(Objects::nonNull)
-                .flatMap(Collection::stream)
-                .filter(Objects::nonNull)
-                .map(Uid::getId)
-                .findFirst()
-                .orElse(null);
-
-    }
-
     private RubiconUserExtRp rubiconUserExtRp(User user, ExtImpRubicon rubiconImpExt) {
         final JsonNode target = rubiconUserExtRpTarget(rubiconImpExt.getVisitor(), user);
 
@@ -1288,7 +1255,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
         if (user != null) {
             mergeFirstPartyDataFromUser(user.getExt(), result);
 
-            enrichWithIabAttribute(result, user.getData(), USER_SEGTAXES);
+            enrichWithIabAndSegtaxAttribute(result, user.getData(), USER_SEGTAXES);
         }
 
         return !result.isEmpty() ? result : null;
@@ -1312,27 +1279,97 @@ public class RubiconBidder implements Bidder<BidRequest> {
         }
     }
 
-    private static void enrichWithIabAttribute(ObjectNode target, List<Data> data, Set<Integer> segtaxValues) {
-        final List<String> iabValue = CollectionUtils.emptyIfNull(data).stream()
+    private static void enrichWithIabAndSegtaxAttribute(ObjectNode target, List<Data> data, Set<Integer> segtaxValues) {
+        final Map<Integer, Deque<Segment>> segments = CollectionUtils.emptyIfNull(data).stream()
                 .filter(Objects::nonNull)
-                .filter(dataRecord -> containsSegtaxValue(dataRecord.getExt(), segtaxValues))
-                .map(Data::getSegment)
+                .map(RubiconBidder::getValidSegments)
                 .filter(Objects::nonNull)
-                .flatMap(segments -> segments.stream()
-                        .map(Segment::getId))
-                .filter(Objects::nonNull)
-                .toList();
+                .collect(Collectors.toMap(
+                        Map.Entry::getKey,
+                        Map.Entry::getValue,
+                        (first, second) -> {
+                            first.addAll(second);
+                            return first;
+                        }));
 
-        if (CollectionUtils.isNotEmpty(iabValue)) {
-            final ArrayNode iab = target.putArray("iab");
-            iabValue.forEach(iab::add);
+        if (MapUtils.isEmpty(segments)) {
+            return;
         }
+
+        final Map<Integer, List<String>> relevantSegments = pickRelevantSegments(segments);
+        final Map<String, List<String>> resultSegments = groupBySegtaxValues(relevantSegments, segtaxValues);
+
+        resultSegments.forEach((segtaxValue, segmentIds) -> {
+            final ArrayNode array = target.putArray(segtaxValue);
+            segmentIds.forEach(array::add);
+        });
     }
 
-    private static boolean containsSegtaxValue(ObjectNode ext, Set<Integer> segtaxValues) {
-        final JsonNode taxonomyName = ext != null ? ext.get("segtax") : null;
+    private static Map<String, List<String>> groupBySegtaxValues(Map<Integer, List<String>> segments,
+                                                                 Set<Integer> segtaxValues) {
 
-        return taxonomyName != null && taxonomyName.isInt() && segtaxValues.contains(taxonomyName.intValue());
+        return segments.entrySet().stream()
+                .collect(Collectors.toMap(
+                        entry -> resolveSegmentName(entry.getKey(), segtaxValues),
+                        Map.Entry::getValue,
+                        ListUtil::union));
+    }
+
+    private static String resolveSegmentName(Integer taxonomyId, Set<Integer> segtaxValues) {
+        return segtaxValues.contains(taxonomyId) ? SEGTAX_IAB : SEGTAX_TAX + taxonomyId;
+    }
+
+    private static Map.Entry<Integer, Deque<Segment>> getValidSegments(Data data) {
+        final ObjectNode ext = data.getExt();
+        final JsonNode taxonomyId = ext != null ? ext.get(SEGTAX) : null;
+        if (taxonomyId == null || !taxonomyId.isInt()) {
+            return null;
+        }
+
+        final Deque<Segment> segments = getValidOnlySegments(data.getSegment());
+        return CollectionUtils.isNotEmpty(segments) ? Map.entry(taxonomyId.intValue(), segments) : null;
+    }
+
+    private static Deque<Segment> getValidOnlySegments(List<Segment> segments) {
+        return CollectionUtils.isNotEmpty(segments)
+                ? segments.stream()
+                .filter(segment -> StringUtils.isNotBlank(segment.getId()))
+                .collect(Collectors.toCollection(ArrayDeque::new))
+                : null;
+    }
+
+    private static Map<Integer, List<String>> pickRelevantSegments(final Map<Integer, Deque<Segment>> segments) {
+        final Map<Integer, List<String>> result = new HashMap<>();
+        final List<Integer> segmentsKeys = new ArrayList<>(segments.keySet());
+
+        int i = 0;
+        int consumedSegmentsCount = 0;
+
+        while (consumedSegmentsCount < MAX_NUMBER_OF_SEGMENTS && !segmentsKeys.isEmpty()) {
+            final int segmentsIndex = i % segmentsKeys.size();
+            final Integer segmentKey = segmentsKeys.get(segmentsIndex);
+            final Deque<Segment> currentSegments = segments.get(segmentKey);
+
+            final Segment lastSegment = currentSegments.pollLast();
+            result.computeIfAbsent(segmentKey, key -> new ArrayList<>()).add(lastSegment.getId());
+            consumedSegmentsCount++;
+
+            if (currentSegments.isEmpty()) {
+                segmentsKeys.remove(segmentKey);
+                i--;
+            }
+            i++;
+        }
+
+        return result;
+    }
+
+    private static Segment getAndRemoveLastSegment(List<Segment> list) {
+        final int lastElementIndex = list.size() - 1;
+        final Segment lastSegment = list.get(lastElementIndex);
+        list.remove(lastElementIndex);
+
+        return lastSegment;
     }
 
     private void processWarnings(List<BidderError> errors, List<String> priceFloorsWarnings) {
@@ -1404,7 +1441,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
 
         if (CollectionUtils.isNotEmpty(siteContentData)) {
             target = existingRubiconSiteExtRpTargetOrEmptyNode(extSite);
-            enrichWithIabAttribute(target, siteContentData, SITE_SEGTAXES);
+            enrichWithIabAndSegtaxAttribute(target, siteContentData, SITE_SEGTAXES);
         }
 
         return mapper.fillExtension(
@@ -1435,21 +1472,16 @@ public class RubiconBidder implements Bidder<BidRequest> {
                 RubiconAppExt.of(RubiconSiteExtRp.of(rubiconImpExt.getSiteId(), null)));
     }
 
-    private static Source makeSource(Source source, String pchain) {
-        final boolean isPchainEmpty = StringUtils.isEmpty(pchain);
+    private static Source makeSource(Source source) {
         final SupplyChain supplyChain = source != null ? source.getSchain() : null;
-        if (isPchainEmpty && supplyChain == null) {
+        if (supplyChain == null) {
             return source;
         }
 
-        final ExtSource extSource = source != null ? source.getExt() : null;
-        final ExtSource resolvedExtSource = supplyChain != null
-                ? copyProperties(extSource, ExtSource.of(supplyChain))
-                : extSource;
+        final ExtSource extSource = source.getExt();
+        final ExtSource resolvedExtSource = copyProperties(extSource, ExtSource.of(supplyChain));
 
-        final Source.SourceBuilder builder = source != null ? source.toBuilder() : Source.builder();
-        return builder
-                .pchain(!isPchainEmpty ? pchain : null)
+        return source.toBuilder()
                 .schain(null)
                 .ext(resolvedExtSource)
                 .build();
@@ -1502,7 +1534,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
     }
 
     private List<HttpRequest<BidRequest>> createDealsRequests(BidRequest bidRequest, String uri) {
-        final Imp singleImp = bidRequest.getImp().get(0);
+        final Imp singleImp = bidRequest.getImp().getFirst();
         return singleImp.getPmp().getDeals().stream()
                 .map(deal -> mapper.mapper().convertValue(deal.getExt(), ExtDeal.class))
                 .filter(Objects::nonNull)
@@ -1694,7 +1726,7 @@ public class RubiconBidder implements Bidder<BidRequest> {
     }
 
     private static BidType bidType(BidRequest bidRequest) {
-        final ImpMediaType impMediaType = impType(bidRequest.getImp().get(0));
+        final ImpMediaType impMediaType = impType(bidRequest.getImp().getFirst());
         return switch (impMediaType) {
             case video -> BidType.video;
             case banner -> BidType.banner;
