@@ -1,11 +1,10 @@
 package org.prebid.server.activity.infrastructure.creator;
 
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.prebid.server.activity.Activity;
 import org.prebid.server.activity.infrastructure.ActivityController;
 import org.prebid.server.activity.infrastructure.ActivityInfrastructure;
@@ -24,7 +23,7 @@ import org.prebid.server.settings.model.PurposeEid;
 import org.prebid.server.settings.model.Purposes;
 import org.prebid.server.settings.model.activity.AccountActivityConfiguration;
 import org.prebid.server.settings.model.activity.privacy.AccountUSNatModuleConfig;
-import org.prebid.server.settings.model.activity.rule.AccountActivityComponentRuleConfig;
+import org.prebid.server.settings.model.activity.rule.AccountActivityConditionsRuleConfig;
 
 import java.util.Map;
 
@@ -38,10 +37,8 @@ import static org.mockito.ArgumentMatchers.same;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.verify;
 
+@ExtendWith(MockitoExtension.class)
 public class ActivityInfrastructureCreatorTest {
-
-    @Rule
-    public final MockitoRule mockitoRule = MockitoJUnit.rule();
 
     @Mock
     private ActivityRuleFactory activityRuleFactory;
@@ -57,7 +54,7 @@ public class ActivityInfrastructureCreatorTest {
 
     private ActivityInfrastructureCreator creator;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         creator = new ActivityInfrastructureCreator(activityRuleFactory, null, metrics, jacksonMapper);
     }
@@ -92,7 +89,7 @@ public class ActivityInfrastructureCreatorTest {
         final Account account = Account.builder()
                 .privacy(AccountPrivacyConfig.builder()
                         .activities(Map.of(Activity.SYNC_USER, AccountActivityConfiguration.of(
-                                null, singletonList(AccountActivityComponentRuleConfig.of(null, null)))))
+                                null, singletonList(AccountActivityConditionsRuleConfig.of(null, null)))))
                         .modules(asList(
                                 AccountUSNatModuleConfig.of(null, null),
                                 AccountUSNatModuleConfig.of(null, null)))
@@ -117,13 +114,13 @@ public class ActivityInfrastructureCreatorTest {
                                 Activity.CALL_BIDDER, AccountActivityConfiguration.of(false, null),
                                 Activity.MODIFY_UFDP, AccountActivityConfiguration.of(true, null),
                                 Activity.TRANSMIT_UFPD, AccountActivityConfiguration.of(true, singletonList(
-                                        AccountActivityComponentRuleConfig.of(null, null)))))
+                                        AccountActivityConditionsRuleConfig.of(null, null)))))
                         .build())
                 .build();
         final GppContext gppContext = GppContextCreator.from(null, null).build().getGppContext();
 
         given(activityRuleFactory.from(
-                same(account.getPrivacy().getActivities().get(Activity.TRANSMIT_UFPD).getRules().get(0)),
+                same(account.getPrivacy().getActivities().get(Activity.TRANSMIT_UFPD).getRules().getFirst()),
                 argThat(arg -> arg.getGppContext() == gppContext)))
                 .willReturn(TestRule.disallowIfMatches(payload -> true));
 
