@@ -13,12 +13,11 @@ import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
 import io.netty.handler.codec.http.HttpHeaderValues;
 import io.vertx.core.MultiMap;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.model.BidderBid;
 import org.prebid.server.bidder.model.BidderCall;
@@ -45,25 +44,23 @@ import static java.util.function.UnaryOperator.identity;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.tuple;
 
+@ExtendWith(MockitoExtension.class)
 public class ConsumableBidderTest extends VertxTest {
 
     private static final String ENDPOINT_URL = "http://exchange.org/";
-
-    @Rule
-    public final MockitoRule mockitoRule = MockitoJUnit.rule();
 
     @Mock
     private PrebidVersionProvider prebidVersionProvider;
 
     private ConsumableBidder target;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         target = new ConsumableBidder(ENDPOINT_URL, jacksonMapper);
     }
 
     @Test
-    public void makeHttpRequestsShouldHaveCorrectHeaders() throws JsonProcessingException {
+    public void makeHttpRequestsShouldHaveCorrectHeaders() {
         // given
         final BidRequest bidRequest = givenSiteBidRequest(identity());
 
@@ -84,7 +81,7 @@ public class ConsumableBidderTest extends VertxTest {
     }
 
     @Test
-    public void makeHttpRequestsShouldHaveCorrectURIForSiteRequest() throws JsonProcessingException {
+    public void makeHttpRequestsShouldHaveCorrectURIForSiteRequest() {
         // given
         final BidRequest bidRequest = givenSiteBidRequest(identity());
 
@@ -99,7 +96,7 @@ public class ConsumableBidderTest extends VertxTest {
     }
 
     @Test
-    public void makeHttpRequestsShouldHaveCorrectURIForAppRequest() throws JsonProcessingException {
+    public void makeHttpRequestsShouldHaveCorrectURIForAppRequest() {
         // given
         final BidRequest bidRequest = givenAppBidRequest(identity());
 
@@ -141,7 +138,7 @@ public class ConsumableBidderTest extends VertxTest {
         // then
         assertThat(result.getValue()).isEmpty();
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("Cannot deserialize value");
+        assertThat(result.getErrors().getFirst().getMessage()).startsWith("Cannot deserialize value");
     }
 
     @Test
