@@ -12,7 +12,7 @@ import com.iab.openrtb.request.Site;
 import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.model.BidderBid;
 import org.prebid.server.bidder.model.BidderCall;
@@ -442,7 +442,7 @@ public class NextMillenniumBidderTest extends VertxTest {
         assertThat(result.getValue())
                 .extracting(HttpRequest::getPayload)
                 .extracting(BidRequest::getImp)
-                .extracting(imps -> imps.get(0))
+                .extracting(imps -> imps.getFirst())
                 .extracting(Imp::getExt)
                 .isNotEqualTo(givenImp.getExt())
                 .extracting(jsonNodes -> mapper.treeToValue(jsonNodes, ExtRequest.class))
@@ -487,7 +487,7 @@ public class NextMillenniumBidderTest extends VertxTest {
         assertThat(result.getValue())
                 .extracting(HttpRequest::getPayload)
                 .extracting(BidRequest::getImp)
-                .extracting(imps -> imps.get(0))
+                .extracting(imps -> imps.getFirst())
                 .element(0)
                 .usingRecursiveComparison()
                 .ignoringFields("ext")
