@@ -11,7 +11,7 @@ import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
 import io.vertx.core.MultiMap;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.model.BidderBid;
 import org.prebid.server.bidder.model.BidderCall;
@@ -61,7 +61,7 @@ public class SmartyAdsBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("ext.bidder not provided");
+        assertThat(result.getErrors().getFirst().getMessage()).startsWith("ext.bidder not provided");
     }
 
     @Test
@@ -118,7 +118,7 @@ public class SmartyAdsBidderTest extends VertxTest {
         // then
         assertThat(result.getErrors()).isEmpty();
         assertThat(result.getValue()).hasSize(1);
-        assertThat(result.getValue().get(0).getUri())
+        assertThat(result.getValue().getFirst().getUri())
                 .isEqualTo("http://testHost.test.com/bid?param1=testSourceId&param2=testAccountId");
     }
 
