@@ -11,7 +11,7 @@ import com.iab.openrtb.request.Site;
 import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.model.BidderBid;
 import org.prebid.server.bidder.model.BidderCall;
@@ -100,7 +100,8 @@ public class TripleliftNativeBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("Unsupported publisher for triplelift_native");
+        assertThat(result.getErrors().getFirst().getMessage())
+                .startsWith("Unsupported publisher for triplelift_native");
         assertThat(result.getValue()).isEmpty();
     }
 
@@ -121,7 +122,8 @@ public class TripleliftNativeBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("Unsupported publisher for triplelift_native");
+        assertThat(result.getErrors().getFirst().getMessage())
+                .startsWith("Unsupported publisher for triplelift_native");
         assertThat(result.getValue()).isEmpty();
     }
 
@@ -140,7 +142,8 @@ public class TripleliftNativeBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("Unsupported publisher for triplelift_native");
+        assertThat(result.getErrors().getFirst().getMessage())
+                .startsWith("Unsupported publisher for triplelift_native");
         assertThat(result.getValue()).isEmpty();
     }
 
@@ -199,8 +202,9 @@ public class TripleliftNativeBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("Failed to decode: Unrecognized token");
-        assertThat(result.getErrors().get(0).getType()).isEqualTo(BidderError.Type.bad_server_response);
+        assertThat(result.getErrors().getFirst().getMessage())
+                .startsWith("Failed to decode: Unrecognized token");
+        assertThat(result.getErrors().getFirst().getType()).isEqualTo(BidderError.Type.bad_server_response);
         assertThat(result.getValue()).isEmpty();
     }
 
