@@ -13,12 +13,11 @@ import com.iab.openrtb.request.Video;
 import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnit;
-import org.mockito.junit.MockitoRule;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.prebid.server.VertxTest;
 import org.prebid.server.auction.versionconverter.BidRequestOrtbVersionConversionManager;
 import org.prebid.server.auction.versionconverter.OrtbVersion;
@@ -46,23 +45,22 @@ import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException
 import static org.assertj.core.api.Assertions.tuple;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mock.Strictness.LENIENT;
 import static org.mockito.Mockito.when;
 import static org.prebid.server.proto.openrtb.ext.response.BidType.banner;
 import static org.prebid.server.proto.openrtb.ext.response.BidType.video;
 
+@ExtendWith(MockitoExtension.class)
 public class YahooAdsBidderTest extends VertxTest {
 
     private static final String ENDPOINT_URL = "https://test.endpoint.com";
 
-    @Rule
-    public final MockitoRule mockitoRule = MockitoJUnit.rule();
-
-    @Mock
+    @Mock(strictness = LENIENT)
     private BidRequestOrtbVersionConversionManager conversionManager;
 
     private YahooAdsBidder target;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         when(conversionManager.convertFromAuctionSupportedVersion(any(BidRequest.class), eq(OrtbVersion.ORTB_2_5)))
                 .thenAnswer(answer -> answer.getArgument(0));
@@ -88,7 +86,7 @@ public class YahooAdsBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("imp #0: Cannot deserialize value");
+        assertThat(result.getErrors().getFirst().getMessage()).startsWith("imp #0: Cannot deserialize value");
         assertThat(result.getValue()).isEmpty();
     }
 
@@ -281,7 +279,7 @@ public class YahooAdsBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).isEmpty();
-        assertThat(result.getValue().get(0).getHeaders())
+        assertThat(result.getValue().getFirst().getHeaders())
                 .extracting(Map.Entry::getKey, Map.Entry::getValue)
                 .containsOnly(tuple("User-Agent", "UA"),
                         tuple("x-openrtb-version", "2.5"),
@@ -299,8 +297,8 @@ public class YahooAdsBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).hasSize(1);
-        assertThat(result.getErrors().get(0).getMessage()).startsWith("Failed to decode: Unrecognized token");
-        assertThat(result.getErrors().get(0).getType()).isEqualTo(BidderError.Type.bad_server_response);
+        assertThat(result.getErrors().getFirst().getMessage()).startsWith("Failed to decode: Unrecognized token");
+        assertThat(result.getErrors().getFirst().getType()).isEqualTo(BidderError.Type.bad_server_response);
         assertThat(result.getValue()).isEmpty();
     }
 
@@ -421,7 +419,7 @@ public class YahooAdsBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).isEmpty();
-        final Regs regs = result.getValue().get(0).getPayload().getRegs();
+        final Regs regs = result.getValue().getFirst().getPayload().getRegs();
         assertThat(regs.getGdpr()).isNull();
         assertThat(regs.getUsPrivacy()).isNull();
         assertThat(regs.getGpp()).isNull();
@@ -449,7 +447,7 @@ public class YahooAdsBidderTest extends VertxTest {
 
         // then
         assertThat(result.getErrors()).isEmpty();
-        final Regs regs = result.getValue().get(0).getPayload().getRegs();
+        final Regs regs = result.getValue().getFirst().getPayload().getRegs();
         assertThat(regs.getGdpr()).isNull();
         assertThat(regs.getUsPrivacy()).isNull();
         assertThat(regs.getExt().getGdpr()).isEqualTo(1);
