@@ -8,7 +8,7 @@ import com.iab.openrtb.request.Native;
 import com.iab.openrtb.response.Bid;
 import com.iab.openrtb.response.BidResponse;
 import com.iab.openrtb.response.SeatBid;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.model.BidderBid;
 import org.prebid.server.bidder.model.BidderCall;
@@ -60,7 +60,7 @@ public class ZMaticooBidderTest extends VertxTest {
         // then
         assertThat(result.getValue()).isEmpty();
         assertThat(result.getErrors()).satisfies(errors -> {
-            assertThat(errors.get(0)).satisfies(error -> {
+            assertThat(errors.getFirst()).satisfies(error -> {
                 assertThat(error.getType()).isEqualTo(BidderError.Type.bad_input);
                 assertThat(error.getMessage()).startsWith("Cannot deserialize value of type");
             });
